@@ -1,3 +1,8 @@
+2013-08-02  Ian Lance Taylor  <iant@google.com>
+
+	* go-gcc.cc (immutable_struct_set_init): Always call
+	resolve_unique_section.
+
 2013-07-24  Ian Lance Taylor  <iant@google.com>
 
 	* go-gcc.cc (Gcc_backend::non_zero_size_type): If a struct has a
